2011-07-04  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::init_std_file_from_handle): Change test for console
	device in call to fh->init to avoid conhost crash on W7.

2011-07-04  Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (environ_init): Reinstantiate on-the-fly CYGWIN variable
	test and call to parse_options if found.

2011-07-04  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.cc (fhandler_base::open_with_arch): Call close_on_exec last
	to avoid setting close_on_exec for archetype.
	* fhandler_tty.cc (fhandler_pty_master::setup): Protect {from,to}_pty
	handles.  Use consistent naming in debug output.  Use inheritable
	handles and...
	(fhandler_pty_master::fixup_after_fork): ...avoid duplicating handles
	here.
	(fhandler_pty_slave::open): Don't set close_on_exec flag here.

2011-07-01  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dtable.cc (cnew): Fix whitespace.

2011-07-01  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/param.h (NGROUPS): Redefine as NGROUPS_MAX.
	(MAXHOSTNAMELEN): Redefine with same value as MAX_HOSTNAME_LEN.  Change
	comment.
	(MAXPATHLEN): Improve comment.
	(MAXSYMLINKS): Define and add comment.

2011-07-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Move NFS-specific code into the
	code block handling FH_FS stuff.

2011-06-30  Ryan Johnson  <ryan.johnson@cs.utoronto.ca>

	* dtable.cc (fh_oom): Remove.
	(fh_calloc): Remove.
	(cnew): Redefine to handle NULL returns from cmalloc.
	(build_fh_name): Accommodate new definition of cnew.  Remove unneeded
	test for fh_oom.
	(fh_alloc): Ditto.

2011-06-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::read): Add comment.
	(fhandler_console::input_tcsetattr): Don't set ENABLE_PROCESSED_INPUT
	if IGNBRK flag is set.

2011-06-30  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (fh_oom): New static fhandler storage.