@@ -1052,7 +1052,7 @@ av::fixup (const char *prog_arg, path_conv& real_path, const char *ext,
 
       status = NtOpenFile (&h, SYNCHRONIZE | GENERIC_READ,
 			   real_path.get_object_attr (attr, sec_none_nih),
-			   &io, FILE_SHARE_READ | FILE_SHARE_WRITE,
+			   &io, FILE_SHARE_VALID_FLAGS,
 			   FILE_SYNCHRONOUS_IO_NONALERT
 			   | FILE_OPEN_FOR_BACKUP_INTENT
 			   | FILE_NON_DIRECTORY_FILE);
